--- a/views/BirthDayCalc.html
+++ b/views/BirthDayCalc.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Data de nascimento usuário: {{.Date}}</h3><br>
-    <h1>Data atual: {{.}}</h1>
+    <h3>Data atual: </h3>
+    <h3>Idade do usuário: </h3>
 </body>
 </html>
