--- a/views/BirthDayCalc.html
+++ b/views/BirthDayCalc.html
@@ -9,6 +9,6 @@
 <body>
     <h3>Data de nascimento usuário: {{.Date}}</h3><br>
     <h3>Data atual: </h3>
-    <h3>Idade do usuário: </h3>
+    <h3>Idade do usuário: {{.Teste}}</h3>
 </body>
 </html>
