--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,8 @@
         <input type="date" name="birthday" id="birthday">
         <input type="submit" value="enviar">
     </form>
-
+    {{$.Teste}}s
+    
 </body>
 </html>
 
